# GTest_Autograde

./: .gitignore  CMakeLists.txt  README.md  open.bat
autograde/: CMakeLists.txt
autograde/include/: autograding.h  utils.h
autograde/src/: utils.cpp
examples/: CMakeLists.txt
examples/simpleSelection/: CMakeLists.txt  main.cpp
examples/simpleSelectionLib/: CMakeLists.txt
examples/testsSimpleSelection/: CMakeLists.txt  ioTest.cpp  main.cpp
